--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,7 +6,7 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-eshoponweb-3637
-  LOCATION: eastus
+  LOCATION: useast
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 2ee7a36e-fad9-45f6-9bf0-0d1c162ab330
   WEBAPP-NAME: eshoponweb-webapp-3637
